force-app/main/default/objects/custom_create385__c/custom_create385__c.object-meta.xml
<CustomObject>
    <label>Custom created object385</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects385</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>