force-app/main/default/objects/custom_create385__c/fields/custom_create_385field613__c.field-meta.xml
<CustomField>
    <fullName>custom_create_385field613__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 385field613</label>
    <type>Checkbox</type>
</CustomField>